Added the papers (total 938 now)

--- a/backend/elasticsearch.env
+++ b/backend/elasticsearch.env
@@ -1,6 +1,6 @@
 # Elasticsearch Configuration
-ES_ENDPOINT=https://your-cluster.es.region.aws.found.io:9243
-ES_API_KEY=your-api-key-here
+ES_ENDPOINT=http://localhost:9200
+ES_API_KEY=
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
