--- a/backend/azure_openai.env
+++ b/backend/azure_openai.env
@@ -4,3 +4,4 @@ AZURE_OPENAI_API_KEY=EiNisSFSBey2v7m3bTI2wRHoCT40M5BCt0zcuDRxzd7FcBwk1maaJQQJ99B
 AZURE_OPENAI_API_VERSION=2024-06-01
 AZURE_OPENAI_DEPLOYMENT=gpt-4o-mini
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=embed-large
+OPENAI
