--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,6 @@
-# Environment files
-*.env
-.env
-.env.local
-.env.production
-.env.development
-azure_openai.env
-elasticsearch.env
+# Environment files (ignore any env files in backend subtree)
+**/*.env
+**/*.env.*
+**/*azure_openai.env*
+**/*openai*.env*
+**/*elasticsearch*.env*
